syntax = "proto3";

package toWorkerTransfer;

option go_package = "netsvr/internal/protocol/toWorker/connOpen;connOpen";

//转发客户连接打开的信息到工作进程
message ConnOpen {
  //当前连接的id
  uint32 sessionId = 1;
}